Small visual tweaks, mostly for Dark Reader compat
- removed qualifier about Crux GUI
- fixed alignment of Legend
- fixed alignment of GitHub logo
- TODO: make "Capabilities" column explanation text tooltip or on-click

--- a/docs/clojurelog.css
+++ b/docs/clojurelog.css
@@ -55,7 +55,7 @@ table {
 .m {
   width: 170px;
   background-color: darkorange;
-  color:brown;
+  color: lightyellow;
   text-align: center;
   vertical-align: middle;
   border-radius: 0px;
